logs/Slang/chapter-6/6.16.7--string_icompare.sv.log
name: string_icompare
description: string.icompare()  tests
should_fail: 0
tags: 6.16.7
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.7--string_icompare.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.7--string_icompare.sv:10:11: error: invalid member access for type 'string'
	int c = a.icompare(b);
	        ~^~~~~~~~~
